--- a/.github/workflows/dart_analyze.yaml
+++ b/.github/workflows/dart_analyze.yaml
@@ -33,3 +33,6 @@ jobs:
 
           # Send the report to DeepSource
           ./bin/deepsource report --analyzer dart-analyze --analyzer-type community --value-file ./dart_analyze.sarif
+        
+        env:
+          DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
