--- a/.github/workflows/dart_analyze.yaml
+++ b/.github/workflows/dart_analyze.yaml
@@ -1,10 +1,5 @@
 name: Dart Analyzer to SARIF
-on:
-  push:
-    branches: [ $default-branch, $protected-branches ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ $default-branch ]
+on: [push]
 jobs:
   dart-analyzer:
     permissions:
