--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Setup Python
           command: |
             apt update
-            apt install python3
+            apt install -y python3
 
       - run:
           name: Run Dart Analyze
