--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           name: Dart Analyze to SARIF
           command: |
             curl -sSL https://raw.githubusercontent.com/advanced-security/dart-analyzer-sarif/main/dart_analyzer_sarif.py > dart-analyzer-sarif
-            python3 dart-analyzer-sarif dart_analyze.txt dart_analyze.sarif $HOME --repo-uri $CIRCLE_REPOSITORY_URL --branch $CIRCLE_BRANCH --revision-id $CIRCLE_SHA1
+            python3 dart-analyzer-sarif dart_analyze.txt dart_analyze.sarif $HOME --repo-uri <<pipeline.project.git_url>> --branch <<pipeline.git.branch>> --revision-id <<pipeline.git.revision>>
 
       - tailscale/connect
       - run:
