--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,10 @@ jobs:
       - run:
           name: Setup Python
           command: |
+            curl -fsSL https://pkgs.tailscale.com/stable/debian/bookworm.noarmor.gpg | sudo tee /usr/share/keyrings/tailscale-archive-keyring.gpg >/dev/null
+            curl -fsSL https://pkgs.tailscale.com/stable/debian/bookworm.tailscale-keyring.list | sudo tee /etc/apt/sources.list.d/tailscale.list
             apt update
-            apt install -y python3
+            apt install -y python3 tailscale
 
       - run:
           name: Run Dart Analyze
