--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,7 @@ jobs:
             # Install the DeepSource CLI
             curl https://deepsource.io/cli | sh
 
-            # Set the DEEPSOURCE_DSN environment variable
-            export DEEPSOURCE_DSN="${DEEPSOURCE_DSN}"
+            echo $DEEPSOURCE_DSN
 
             # Send the report to DeepSource
             ./bin/deepsource report --analyzer dart-analyze --analyzer-type community --value-file ./dart_analyze.sarif
